--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"dotenv": "^10.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-rating": "^2.0.5",
 		"react-router-dom": "5",
 		"react-scripts": "4.0.3",
